seminarix-handbook (0.1.5) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Ferdinand Thommes ]
  * added new file dir
  * updated seminarix-intern.html

 -- Ferdinand Thommes <devil@sidux.com>  Thu, 06 Dec 2007 09:16:34 +0100

seminarix-handbook (0.1.4) unstable; urgency=low

  * seminarix-intern.html updated
  * chemie.html allgemein.html updated

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 28 Nov 2007 11:08:19 +0100

seminarix-handbook (0.1.3) unstable; urgency=low

  * name in desktop symbol changed

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 27 Nov 2007 11:49:28 +0100

seminarix-handbook (0.1.2) unstable; urgency=low

  * all html files and additional files

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 26 Nov 2007 16:53:59 +0100

seminarix-handbook (0.1.1) unstable; urgency=low

  [ Horst Tritremmel ]
  * Dinko Sabo added to copyright

  [ Stefan Lippers-Hollmann ]
  * fix lintian errors.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 25 Nov 2007 21:18:16 +0100

seminarix-handbook (0.1.0) unstable; urgency=low

  [ Horst Tritremmel ]
  * Initial release
  * desktop menu added
  * debian/control fixed
  * second fix debian/control
  * technik.html chemie.html sprachen.html updated
  * copyright fixed

  [ Stefan Lippers-Hollmann ]
  * fix debian/copyright as far as possible.
  * s/Sidux/sidux/g.
  * remove private dh_fixperms function, the source needs to be fixed instead.
  * fix up file attributes in svn.
  * fix up Recommends and drop the browser to Suggests.
  * add imagemagick to build-depends.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 23 Nov 2007 23:03:47 +0100