@@ -134,7 +134,7 @@
 
 <p>In der Beschreibung zum jeweiligen Programm befindet sich auch ein Link zur Homepage auf der Sie noch mehr Informationen zum jeweiligen Programm finden.</p>
 
-<p><IMG src="pictures/sidux-edu-starter.png" alt="sidux-edu-starter" width="698" height="529"></p>
+<p><img src="pictures/sidux-edu-starter.png" alt="sidux-edu-starter" width="698" height="529"></p>
 
 <p>&nbsp;</p>
 
@@ -188,22 +188,22 @@ Aus diesen Gründen musste daher aus Platzgründen auf einige Pakete verzichtet 
 <li>Kletters</li>
 <li>Linux Letters and Numbers</li>
 <li>Lmemory</li>
-<Li>Pimgus</Li>
-<Li>Tipptrainer</Li>
-<Li>TuxType</Li>
-<Li>Octave</Li>
-<Li>RKWard</Li>
-<Li>Amarok</Li>
-<Li>Glame</Li>
-<Li>Celistia</Li>
-<Li>Weltzeituhr</Li>
-<Li>Xoscope</Li>
-<Li>Kiten</Li>
-<Li>KVerbos</Li>
-<Li>KTechlab</Li>
-<Li>PCB</Li>
-<Li>qcad</Li>
-<li><span class="italicred">NVU</span></Li> 
+<li>Pimgus</li>
+<li>Tipptrainer</li>
+<li>TuxType</li>
+<li>Octave</li>
+<li>RKWard</li>
+<li>Amarok</li>
+<li>Glame</li>
+<li>Celistia</li>
+<li>Weltzeituhr</li>
+<li>Xoscope</li>
+<li>Kiten</li>
+<li>KVerbos</Li>
+<Li>KTechlab</li>
+<li>PCB</Li>
+<Li>qcad</li>
+<li><span class="italicred">NVU</span></li> 
 </ul>
 
 <p>NVU wurde durch Quanta ersetzt, da NVU nicht in Debian enthalten ist. Die Einarbeitung in Quanta erfordert zwar anfangs einen etwas höheren Lernaufwand, dafür hat man dann aber ein weitaus leistungsfähigeres Werkzeug zur Verfügung, welches außerdem wesentlich sauberere Webseiten generiert.</p>
