@@ -6,8 +6,9 @@ seminarix-handbook (0.1.5) UNRELEASED; urgency=low
   [ Ferdinand Thommes ]
   * added new file dir
   * updated seminarix-intern.html
+  * fixed tags in seminarix-intern.html
 
- -- Ferdinand Thommes <devil@sidux.com>  Thu, 06 Dec 2007 09:16:34 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Thu, 06 Dec 2007 12:05:13 +0100
 
 seminarix-handbook (0.1.4) unstable; urgency=low
 
